2 speakers en la misma charla

--- a/index.html
+++ b/index.html
@@ -242,8 +242,9 @@ google.maps.event.addDomListener(window, 'load', initialize);
       </div>
 
       <div class="col-md-4">
-        <div class="sorianello circle"> </div>
-        <h2><a href="https://www.twitter.com/_joac" target='blank'>Joaquín Sorianello</a></h2>
+        <div class="sorianello small_circle"> </div>
+        <div class="facundo small_circle"> </div>
+        <h2><a href="https://www.twitter.com/_joac" target='blank'>Joaquín Sorianello & Facundo Batista</a></h2>
         <h4>No es magia: descriptores al desnudo</h4>
         <p>Python es un un lenguaje que se destaca por la flexibilidad para customizar el comportamiento de los objetos. Partiremos de un caso de estudio y explicaremos en detalle la API de descriptores de python, para poder comprender su funcionamiento y comportamiento, para poder así aprovecharlos al máximo a la hora de desarrollar. No apta para personas poco curiosas</p>
       </div>
