--- a/index.html
+++ b/index.html
@@ -44,6 +44,34 @@ google.maps.event.addDomListener(window, 'load', initialize);
 </head>
 <body>
 
+  <nav class="navbar navbar-default" role="navigation">
+      <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        
+        <!--Replace text with your app name or logo image-->
+        <!--<img src='img/python_logo.png' class='nav-logo'>-->
+        <a class="navbar-brand" href="#">PyCon Argentina</a>
+        
+      </div>
+      <div class="collapse navbar-collapse navbar-ex1-collapse">
+        <ul class="nav navbar-nav">
+          <li><a onclick="$('#register').animatescroll({padding:71});">Inscripciones</a></li>
+          <li><a onclick="$('#speakers').animatescroll({padding:71});">Speakers</a></li>
+          <li><a onclick="$('#venue').animatescroll({padding:71});">Donde?</a></li>
+          <li><a onclick="$('#conduct').animatescroll({padding:71});">Código de conducta</a></li>
+          <li><a onclick="$('#sponsors').animatescroll({padding:71});">Sponsors</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
 <!-- HEADER
      ================================================== -->	  
 <header>
@@ -88,7 +116,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
 <!-- CALL FOR CHARLAS
         ================================================== -->
 <section class="sponsors">
-  <div class="container">
+  <div id="register" class="container">
     <div class="row">
       <h1>Inscripciones abiertas!</h1>
       <p class="lead">Durante todas las jornadas, podrás elegir entre 2 charlas que se darán al mismo tiempo.   
@@ -101,7 +129,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
 
 <section class="features">
-  <div class="container">
+  <div id="speakers" class="container">
 
     <div class="row">
 
@@ -336,7 +364,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
   </section>
 
 <section class="venue">
-  <div class="row">
+  <div id="venue" class="row">
     <h1>¿Dónde?</h1>
     <p class="lead">En el centro cultural Julio Le Parc</p>
     <div class="col-md-12 leparc">
@@ -350,7 +378,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
 </section>
 
 <section class="sponsors">
-  <div class="container">
+  <div id="conduct" class="container">
     <div class="row">
       <div class="col-md-offset-2 col-md-8">
 
@@ -375,7 +403,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
   </div>
 </section>
 
-<section class="purchase">
+<section id="sponsors" class="purchase">
   </br>
   <h1>Sponsors</h1>
 
