--- a/index.html
+++ b/index.html
@@ -421,6 +421,12 @@ google.maps.event.addDomListener(window, 'load', initialize);
       <img src="img/sponsors/Onapsis_Logo.png" class='img-responsive'/>
     </div>
   </div>
+  <div class="row">
+    <div class="col-lg-4 col-md-3 col-sm-2 col-xs-2"></div>
+    <div class="col-lg-8 col-md-3 col-sm-8 col-xs-8">
+      <img src="img/sponsors/BitPagos.png" class='img-responsive'/>
+    </div>
+  </div>
 
   <h2>Oro</h2>
   <div class="row">
