--- a/index.html
+++ b/index.html
@@ -430,14 +430,17 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
   <h2>Oro</h2>
   <div class="row">
-    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"></div>
+    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
       <img src="img/sponsors/Machinalis-Isologo.png" class='img-responsive'/>
     </div>
     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
       <img src="img/sponsors/mozio-logo.png" class='img-responsive'/>
     </div>
-    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"></div>
+    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+      <img src="img/sponsors/devsar.png" class='img-responsive'/>
+    </div>
+    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
   </div>
 
   <h2>Plata</h2>
@@ -467,9 +470,11 @@ google.maps.event.addDomListener(window, 'load', initialize);
     <div class="col-lg-1 col-md-1 col-sm-1 col-xs-2">
       <img src="img/sponsors/bqt-logo-cuadrado.png" class='img-responsive'/>
     </div>
+    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-2"> 
+      <img src="img/sponsors/bitson.png" class='img-responsive'/>
+    </div>
     <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"> </div>
-    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"> </div>
-    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"> </div>
+    <div class="col-lg-1 col-md-1 col-sm-1"> </div>
     <div class="col-lg-1 col-md-1 col-sm-1"> </div>
     <div class="col-md-1 col-md-1 col-sm-1"> </div>
   </div>
