--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
           <li><a onclick="$('#register').animatescroll({padding:71});">Inscripciones</a></li>
           <li><a onclick="$('#speakers').animatescroll({padding:71});">Speakers</a></li>
           <li><a onclick="$('#venue').animatescroll({padding:71});">Donde?</a></li>
+          <li><a onclick="$('#hotels').animatescroll({padding:71});">Alojamiento</a></li>
           <li><a onclick="$('#conduct').animatescroll({padding:71});">Código de conducta</a></li>
           <li><a onclick="$('#sponsors').animatescroll({padding:71});">Sponsors</a></li>
         </ul>
@@ -374,6 +375,46 @@ google.maps.event.addDomListener(window, 'load', initialize);
     <div class="col-md-12 google-maps">
       <div id='map'></div>
     </div>
+  </div>
+</section>
+
+<section>
+  <div id="hotels" class="row">
+    <h1>Alojamiento</h1>
+    <div class="col-md-12">
+      <p class="lead">Tenemos algunos descuentos exclusivos que hemos podido conseguir para el evento, estas opciones no están "cerca" del lugar de la conferencia pero es donde están todos los hoteles y hostels, pueden compartir un taxi o ir en colectivo, y definitivamente es la mejor zona para hospedarse.
+      En caso de no gustarles las opciones pueden conseguir fácilmente otras, Mendoza es una ciudad muy turística con muchas alternativas, e inclusive en <a href="https://www.airbnb.com/s/Mendoza--Mendoza-Province--Argentina?guests=&checkin=&ss_id=y6qd6kjj&source=bb" target="blank">Airbnb</a> deberían tener algunas buenas opciones si les gusta esa onda.</p>
+    </div>
+    <div class="col-md-6">
+      <h3>Mendoza Inn Hostel</h3>
+
+      <p>Dirección: <a href="https://goo.gl/maps/9nSGgAyueHJ2" target="blank">Arístides Villanueva 470, Ciudad</a></p>
+      <p>Web: <a href="http://www.mendozahostel.com" target="blank">http://www.mendozahostel.com</a></p>
+
+      <p><b>Precios de Dormis Compartidos:</b> (valores por persona y por noche)</p>
+      <p>Dormi cuadruple mixto con baño privado: $ 160</p>
+      <p>Dormi cuadruple mixto con baño compartido: $ 140  </p>    
+      <p>Dormi sextuple femenino con baño privado: $ 160       </p>               
+      <p>Dormi sextuple mixto con baño privado: $ 140</p>
+      <p>Dormi sextuple mixto con baño compartido: $ 130</p>
+      <p>Dormi octuple mixto con Baño Compartido: $ 120</p>
+
+      <p>Para reservas exclusivas del evento contactarse con Ivan Graf a <a href="mailto:info@mendozahostel.com">info@mendozahostel.com</a></p>
+    </div>
+    <div class="col-md-6">
+      <h3>Damajuana Hostel/ Ítaka Hostel/ Bed for Wine Hostel</h3>
+
+
+      <p>Dirección: <a href="https://goo.gl/maps/DvvvEKt5J9Q2" target="blank">Arístides Villanueva 282, Ciudad</a></p>
+      <p><a href="https://goo.gl/maps/WjVBeSsLD262" target="blank">Arístides Villanueva 480, Ciudad</a></p>
+      <p><a href="https://goo.gl/maps/Jd11woHCj1r" target="blank">Belgrano 965, Ciudad</a></p>
+      <p>Web: <a href="http://www.damajuanahostel.com.ar" target="blank">www.damajuanahostel.com.ar</a> <a href="http://www.itakahostel.com.ar" target="blank">www.itakahostel.com.ar</a> <a href="http://www.bedforwinehostel.com" target="blank">www.bedforwinehostel.com</a></p>
+
+      <p>10% de descuento sobre tarifa publicada.</p>
+
+      <p>Para reservas exclusivas del evento contactarse con Rodolfo Zamperoni a <a href="mailto:gerencia@damajuanahostel.com.ar">gerencia@damajuanahostel.com.ar</a></p>
+    </div>
+
   </div>
 </section>
 
