Arreglamos el grid con el taller de DjangoGirls

--- a/index.html
+++ b/index.html
@@ -169,15 +169,12 @@ google.maps.event.addDomListener(window, 'load', initialize);
       </div>
 
       <div class="col-md-4">
-        <div class="victoria circle">
-        </div>
-        <h2><a href="https://www.twitter.com/vkmc" target='blank'>Victoria Martinez De La Cruz</a></h2>
+        <div class="linuxchi circle inline"> </div>
+        <div class="argentinaenpython circle inline"> </div>
+        <h2><a href="https://www.twitter.com/linuxchixar" target='blank'>LinuxChiXAr</a> & <a href="https://www.twitter.com/argenpython" target='blank'>Argentina en Python</a></h2>
         <h4>DjangoGirls Tutorial</h4>
         <p>DjangoGirls es una organización sin fines de lucro que tiene como objetivo animar a que más mujeres se involucren con la tecnología y aumentar la diversidad en la comunidad de Django. Para esto proveen herramientas, recursos y soporte para organizar talleres de programación de un día para que participantes sin conocimientos previos de programación puedan construir su primera aplicación web, usando Python, Django, HTML y CSS. Un taller típico admite entre 30 y 40 participantes, que trabajarán en equipos de tres personas y un tutor.</p>
       </div>
-
-
-
 
       <div class="col-md-4">
         <div class="deza circle"></div>
