--- a/index.html
+++ b/index.html
@@ -484,14 +484,16 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
   <h2>Plata</h2>
   <div class="row">
-    <div class="col-lg-3 col-md-2 col-sm-2 col-xs-2"></div>
     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
-    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
+    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+      <img src="img/sponsors/SL-black-logo.png" class='img-responsive'/>
+    </div>
+    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
       <img src="img/sponsors/logo.svg" class='img-responsive'/>
     </div>
-    <div class="col-lg-1 col-md-2 col-sm-2 col-xs-3"></div>
     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
-    <div class="col-lg-2 col-md-2 col-sm-2"></div>
+    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
   </div>
 
   <h2>Bronce</h2>
