--- a/index.html
+++ b/index.html
@@ -691,10 +691,16 @@ google.maps.event.addDomListener(window, 'load', initialize);
     <div class="col-lg-1 col-md-1 col-sm-1"> </div>
     <div class="col-md-1 col-md-1 col-sm-1"> </div>
   </div>
-
+  <h2>Apoyan</h2>
   <div class="row">
-    <h1>¿Querés ser sponsor del evento?</h1>
-    <a href="https://drive.google.com/file/d/0B7R6KRhjEcaHZF9iRDNBUGpQUWs/view?usp=sharing" class="btn btn-lg btn-primary" target="blank" role="button">Carta Sponsors</a>
+  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"></div> 
+  <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"> 
+    <img src="img/PSF-Logo-Narrow-Shapes.png" class='img-responsive'/>
+  </div>
+  <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"> 
+    <img src="img/jetbrains.png" class='img-responsive'/>
+  </div>
+  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"></div> 
   </div>
 </section>
 
