--- a/index.html
+++ b/index.html
@@ -695,10 +695,10 @@ google.maps.event.addDomListener(window, 'load', initialize);
   <div class="row">
   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"></div> 
   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"> 
-    <img src="img/PSF-Logo-Narrow-Shapes.png" class='img-responsive'/>
+    <a href='https://www.python.org/psf/' target='blank'><img src="img/PSF-Logo-Narrow-Shapes.png" class='img-responsive'/></a>
   </div>
   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"> 
-    <img src="img/jetbrains.png" class='img-responsive'/>
+    <a href='https://www.jetbrains.com/' target='blank'><img src="img/jetbrains.png" class='img-responsive'/></a>
   </div>
   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"></div> 
   </div>
