--- a/index.html
+++ b/index.html
@@ -620,77 +620,32 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
   <h2>Diamante</h2>
   <div class="row">
-    <div class="col-lg-4 col-md-3 col-sm-2 col-xs-2"></div>
-    <div class="col-lg-8 col-md-3 col-sm-8 col-xs-8">
-      <img src="img/sponsors/eventbrite_brand_2015.png" class='img-responsive'/>
-    </div>
-  </div>
-  </br>
-  <div class="row">
-    <div class="col-lg-4 col-md-3 col-sm-2 col-xs-2"></div>
-    <div class="col-lg-8 col-md-3 col-sm-8 col-xs-8">
-      <img src="img/sponsors/Onapsis_Logo.png" class='img-responsive'/>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-4 col-md-3 col-sm-2 col-xs-2"></div>
-    <div class="col-lg-8 col-md-3 col-sm-8 col-xs-8">
-      <img src="img/sponsors/BitPagos.png" class='img-responsive'/>
+    <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-12">
+      <img src="img/sponsors/Marcas-sitio-pycon-diamante.png" class='img-responsive'/>
     </div>
   </div>
 
   <h2>Oro</h2>
   <div class="row">
-    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
-    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-      <img src="img/sponsors/Machinalis-Isologo.png" class='img-responsive'/>
+    <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
+      <img src="img/sponsors/Marcas-sitio-pycon-oro.png" class='img-responsive'/>
     </div>
-    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-      <img src="img/sponsors/mozio-logo.png" class='img-responsive'/>
-    </div>
-    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-      <img src="img/sponsors/devsar.png" class='img-responsive'/>
-    </div>
-    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
   </div>
 
   <h2>Plata</h2>
   <div class="row">
-    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
-    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
-    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-      <img src="img/sponsors/SL-black-logo.png" class='img-responsive'/>
+    <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
+      <img src="img/sponsors/Marcas-sitio-pycon-plata.png" class='img-responsive'/>
     </div>
-    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-      <img src="img/sponsors/logo.svg" class='img-responsive'/>
-    </div>
-    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
-    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
   </div>
 
   <h2>Bronce</h2>
   <div class="row">
-    <div class="col-lg-1 col-md-1 col-sm-1"> </div>
-    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"> </div>
-    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"> </div>
-    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"> </div>
-    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-2">
-      <img src="img/sponsors/nuevo_logo1.png" class='img-responsive'/>
+    <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-12">
+      <img src="img/sponsors/Marcas-sitio-pycon-bronce.png" class='img-responsive'/>
     </div>
-    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-2">
-      <img src="img/sponsors/fierro2015.svg" class='img-responsive'/>
-    </div>
-    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-2">
-      <img src="img/sponsors/bqt-logo-cuadrado.png" class='img-responsive'/>
-    </div>
-    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-2"> 
-      <img src="img/sponsors/bitson.png" class='img-responsive'/>
-    </div>
-    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"> </div>
-    <div class="col-lg-1 col-md-1 col-sm-1"> </div>
-    <div class="col-lg-1 col-md-1 col-sm-1"> </div>
-    <div class="col-md-1 col-md-1 col-sm-1"> </div>
   </div>
+
   <h2>Apoyan</h2>
   <div class="row">
   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"></div> 
