--- a/index.html
+++ b/index.html
@@ -82,8 +82,12 @@ google.maps.event.addDomListener(window, 'load', initialize);
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <img src='img/python_logo.png' class='logo'>
-        <h1>PyCon Argentina 2015</h1>
+        <div class="row">
+          <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-12">
+            <img src='img/logo-pycon-15.png'>
+          </div>
+        </div>
+        </br>
         <p class="lead">12,13 y 14 de Noviembre en Mendoza</p>
 
         <!--<div class="carousel-iphone">-->
