Otra opción más de alojamiento

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
       <p class="lead">Tenemos algunos descuentos exclusivos que hemos podido conseguir para el evento, estas opciones no están "cerca" del lugar de la conferencia pero es donde están todos los hoteles y hostels, pueden compartir un taxi o ir en colectivo, y definitivamente es la mejor zona para hospedarse.
       En caso de no gustarles las opciones pueden conseguir fácilmente otras, Mendoza es una ciudad muy turística con muchas alternativas, e inclusive en <a href="https://www.airbnb.com/s/Mendoza--Mendoza-Province--Argentina?guests=&checkin=&ss_id=y6qd6kjj&source=bb" target="blank">Airbnb</a> deberían tener algunas buenas opciones si les gusta esa onda.</p>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-4">
       <h3>Mendoza Inn Hostel</h3>
 
       <p>Dirección: <a href="https://goo.gl/maps/9nSGgAyueHJ2" target="blank">Arístides Villanueva 470, Ciudad</a></p>
@@ -405,7 +405,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
       <p>Para reservas exclusivas del evento contactarse con Ivan Graf a <a href="mailto:info@mendozahostel.com">info@mendozahostel.com</a></p>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-4">
       <h3>Damajuana Hostel/ Ítaka Hostel/ Bed for Wine Hostel</h3>
 
 
@@ -417,6 +417,22 @@ google.maps.event.addDomListener(window, 'load', initialize);
       <p>10% de descuento sobre tarifa publicada.</p>
 
       <p>Para reservas exclusivas del evento contactarse con Rodolfo Zamperoni a <a href="mailto:gerencia@damajuanahostel.com.ar">gerencia@damajuanahostel.com.ar</a></p>
+    </div>
+    <div class="col-md-4">
+      <h3>Lapacho Hostel</h3>
+
+
+      <p>Dirección: <a href="https://goo.gl/maps/m93td8fAdaK2" target="blank">Montevideo 786, Ciudad</a></p>
+      <p>Web: <a href="http://www.lapachohostel.com/" target="blank">www.lapachohostel.com</a> </p>
+
+      <p>Habitación compartida de 6 personas c/ baño compartido: $120.</p>
+      <p>Habitación compartida de 4 personas c/ baño privado: $150.</p>
+      <p>Habitación compartida de 4 personas c/ baño compartido: $130.</p>
+      <p>Habitacion matrimonial c/ baño compartido: $300.</p>
+      <p>Habitación twin matrimonial c/ baño privado: $350.</p>
+      <p>Todas las habitaciones incluyen desayuno incluido.</p>
+
+      <p>Para reservas exclusivas del evento escribir a <a href="mailto:lapachohostel@gmail.com">lapachohostel@gmail.com</a></p>
     </div>
 
   </div>
