--- a/index.html
+++ b/index.html
@@ -442,7 +442,60 @@ google.maps.event.addDomListener(window, 'load', initialize);
   <div id="agenda" class="row agenda">
     <h1>Agenda</h1>
     <h2>Jueves</h1>
-    <p class='lead'> El taller de <a href='#djangogirls'>Django Girls</a> y de <a href='#pythonparainiciantes'>Python para iniciantes</a> se desarrollarán este día. Detalles de los horarios y salas a definir pronto.</p>
+        <div class="table-responsive">
+      <table class="table"> 
+        <tr>
+          <th colspan="2" style="text-align:center">Hora</th>
+          <th style="text-align:center" bgcolor='#FED359'>Track 1</th>
+          <th style="text-align:center" bgcolor='#4687B0'>Track 2</th>
+        </tr>
+        <tr>
+          <td align"center">8:00</td>
+          <td align"center">8:30</td>
+          <td colspan="2" align="center">Acreditacion</td>
+        </tr>
+        <tr>
+          <td align"center">8:30</td>
+          <td align"center">10:40</td>
+          <td align="center" bgcolor='#FED359'>DjangoGirls Tutorial<br/><span class="speaker">(inscripción adicional requerida <a href='http://argentinaenpython.com.ar/django-girls-en-pyconar-mdz/' target='blank'>aquí</a>)</span></td>
+          <td align="center" bgcolor='#4687B0'>Python para iniciantes<br/><span class="speaker2">Fernando Masanori</span></td>
+        </tr>
+        <tr>
+          <td align"center">10:40</td>
+          <td align"center">11:10</td>
+          <td colspan="2" align="center">Coffee Break</td>
+        </tr>
+        <tr>
+          <td align"center">11:10</td>
+          <td align"center">12:50</td>
+          <td align="center" bgcolor='#FED359'>DjangoGirls Tutorial<br/><span class="speaker">(inscripción adicional requerida <a href='http://argentinaenpython.com.ar/django-girls-en-pyconar-mdz/' target='blank'>aquí</a>)</span></td>
+          <td align="center" bgcolor='#4687B0'>Python para iniciantes<br/><span class="speaker2">Fernando Masanori</span></td>
+        </tr>
+        <tr>
+          <td align"center">12:50</td>
+          <td align"center">13:50</td>
+          <td colspan="2" align="center">Almuerzo</td>
+        </tr>
+        <tr>
+          <td align"center">13:50</td>
+          <td align"center">15:30</td>
+          <td align="center" bgcolor='#FED359'>DjangoGirls Tutorial<br/><span class="speaker">(inscripción adicional requerida <a href='http://argentinaenpython.com.ar/django-girls-en-pyconar-mdz/' target='blank'>aquí</a>)</span></td>
+          <td align="center" bgcolor='#4687B0'>TBA</td>
+        </tr>
+        <tr>
+          <td align"center">15:30</td>
+          <td align"center">16:00</td>
+          <td colspan="2" align="center">Coffee Break</td>
+        </tr>
+        <tr>
+          <td align"center">16:00</td>
+          <td align"center">18:00</td>
+          <td align="center" bgcolor='#FED359'>DjangoGirls Tutorial<br/><span class="speaker">(inscripción adicional requerida <a href='http://argentinaenpython.com.ar/django-girls-en-pyconar-mdz/' target='blank'>aquí</a>)</span></td>
+          <td align="center" bgcolor='#4687B0'>TBA</td>
+        </tr>
+      </table>
+    </div>
+
     <h2>Viernes</h1>
     <div class="table-responsive">
       <table class="table"> 
