--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
           <td align"center">13:50</td>
           <td align"center">15:30</td>
           <td align="center" bgcolor='#FED359'>DjangoGirls Tutorial<br/><span class="speaker">(inscripción adicional requerida <a href='http://argentinaenpython.com.ar/django-girls-en-pyconar-mdz/' target='blank'>aquí</a>)</span></td>
-          <td align="center" bgcolor='#4687B0'>TBA</td>
+          <td align="center" bgcolor='#4687B0'>Como manejar 220,000 QPS sin despeinarse!<br/><span class="speaker2"></span></td>
         </tr>
         <tr>
           <td align"center">15:30</td>
