Se caen 2 speakers. Movimientos en la agenda

--- a/index.html
+++ b/index.html
@@ -290,31 +290,6 @@ google.maps.event.addDomListener(window, 'load', initialize);
       </div>
 
     </div>
-
-    <div class="row">
-      <div class="col-md-4">
-        <div class="roberto circle">
-        </div>
-        <h2><a href="https://www.twitter.com/ralsina" target='blank'>Roberto Alsina</a></h2>
-        <h4>Cualquiera puede programar: construyendo la estrella de la muerte con legos</h4>
-        <p>Igual que las bandas punks, que pueden hacer una canción con tres acordes que te vuela la peluca, vos podés, armado con diez conceptos básicos, hacer programas que realizan tareas complicadas, que tal vez suponés están fuera de tu alcance. En esta charla vas a ver un ejemplo.</p>
-      </div>
-
-      <div class="col-md-4">
-        <div class="felipe circle"> </div>
-        <h2><a href="https://www.twitter.com/felipelerena" target='blank'>Felipe Lerena</a></h2>
-        <h4>Wachipistola Python Package Maintainer</h4>
-        <p>En una sola charla te cuento cómo hacer tu propia biblioteca de Python, como empaquetarlo para pypi, subirlo al sitio y actualizarlo (desde la consola!), cómo mantener ese paquete en Github, como generar los documentos, como subirlos a Read the Docs y si me queda tiempo te muestro como hacer un paquete que sea considerado como una extensión oficial de Flask. Todo acompañado de muchas tips producto de la experiencia y de largas horas de gritarle al monitor.</p>
-      </div>
-
-      <div class="col-md-4">
-        <div class="david circle"></div>
-        <h2><a href="https://about.me/tenuki" target='blank'>David Weil</a></h2>
-        <h4>Es posible detectar las excepciones de un codigo python?</h4>
-        <p>Detectar todas las excepciones que pueden lanzarse en un programa, incluso en una funcion (y las que usa), no es una tarea completamente factible ni sencillo. Sin embargo, hay algunas cuantas cosas que uno puede hacer, para tener una idea bastante aproximada de ello. Veremos una posible implementacion para resolver este problema en cierta medida.</p>
-      </div>
-    </div>
-
     
     <div class="row">
       <div class="col-md-4">
@@ -365,6 +340,16 @@ google.maps.event.addDomListener(window, 'load', initialize);
         <p>Vamos a ver cómo, a partir de un programa que usa sockets, se puede desarrollar un framework asincrónico; y cómo traducir dicho programa a la versión de asyncio de Python3.5.</p>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-md-4">
+        <div class="david circle"></div>
+        <h2><a href="https://about.me/tenuki" target='blank'>David Weil</a></h2>
+        <h4>Es posible detectar las excepciones de un codigo python?</h4>
+        <p>Detectar todas las excepciones que pueden lanzarse en un programa, incluso en una funcion (y las que usa), no es una tarea completamente factible ni sencillo. Sin embargo, hay algunas cuantas cosas que uno puede hacer, para tener una idea bastante aproximada de ello. Veremos una posible implementacion para resolver este problema en cierta medida.</p>
+      </div>
+    </div>
+
 
   </section>
 
@@ -540,8 +525,8 @@ google.maps.event.addDomListener(window, 'load', initialize);
         <tr>
           <td align"center">12:05</td>
           <td align"center">12:50</td>
-          <td align="center" bgcolor='#FED359'>Django ORM at Scale!<br/><span class="speaker">Martín Alderete</span></td>
-          <td align="center" bgcolor='#4687B0'>Cualquiera puede programar: construyendo la estrella de la muerte con legos<br/><span class="speaker2">Roberto Alsina</span></td>
+          <td align="center" bgcolor='#FED359'>El desarrollador imperfecto: una guía para reivindicarse<br/><span class="speaker">Alfredo Deza</span></td>
+          <td align="center" bgcolor='#4687B0'>Django ORM at Scale!<br/><span class="speaker2">Martín Alderete</span></td>
         </tr>
         <tr>
           <td align"center">12:50</td>
@@ -552,7 +537,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
           <td align"center">13:50</td>
           <td align"center">14:35</td>
           <td align="center" bgcolor='#FED359'>De socket a asyncio en 45 minutos<br/><span class="speaker">Marcos Dione</span></td>
-          <td align="center" bgcolor='#4687B0'>Wachipistola Python Package Maintainer<br/><span class="speaker2">Felipe Lerena</span></td>
+          <td align="center" bgcolor='#4687B0'>TBA<br/><span class="speaker2"></span></td>
         </tr>
         <tr>
           <td align"center">14:45</td>
@@ -598,7 +583,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
         <tr>
           <td align"center">9:00</td>
           <td align"center">9:45</td>
-          <td align="center" bgcolor='#FED359'>El desarrollador imperfecto: una guía para reivindicarse<br/><span class="speaker">Alfredo Deza</span></td>
+          <td align="center" bgcolor='#FED359'>TBA<br/><span class="speaker"></span></td>
           <td align="center" bgcolor='#4687B0'>Obteniendo respuestas en milisegundos<br/><span class="speaker2">Claudio Daniel Freire</span></td>
         </tr>
         <tr>
