--- a/index.html
+++ b/index.html
@@ -426,6 +426,8 @@ google.maps.event.addDomListener(window, 'load', initialize);
 <section class="purchase">
   <div id="agenda" class="row agenda">
     <h1>Agenda</h1>
+    <p class='lead'>Descargá la agenda a tu calendario aquí: <a href='https://calendar.google.com/calendar/embed?src=bitson.com.ar_v8sh48sltkevcvn1kiqneq7dj0@group.calendar.google.com&ctz=America/Argentina/Buenos_Aires' target='blank'>Track 1</a>, <a href='https://www.google.com/calendar/embed?src=bitson.com.ar_65sekd9113ht81436s3r60jaj8%40group.calendar.google.com&ctz=America/Argentina/Buenos_Aires' target='blank'>Track 2</a>, o consultala a continuación.</p>
+
     <h2>Jueves</h1>
         <div class="table-responsive">
       <table class="table"> 
