--- a/index.html
+++ b/index.html
@@ -348,6 +348,12 @@ google.maps.event.addDomListener(window, 'load', initialize);
         <h4>Es posible detectar las excepciones de un codigo python?</h4>
         <p>Detectar todas las excepciones que pueden lanzarse en un programa, incluso en una funcion (y las que usa), no es una tarea completamente factible ni sencillo. Sin embargo, hay algunas cuantas cosas que uno puede hacer, para tener una idea bastante aproximada de ello. Veremos una posible implementacion para resolver este problema en cierta medida.</p>
       </div>
+      <div class="col-md-4">
+        <div class="jjconti circle"></div>
+        <h2><a href="https://www.twitter.com/jjconti" target='blank'>Juanjo Conti</a></h2>
+        <h4>Qué extrañé de Python en los últimos 4 lenguajes en los que trabajé</h4>
+        <p>Qué extrañé de Python en los últimos 4 lenguajes en los que trabajé: PHP, Ruby, Swift, Clojure.PHP: el feoRuby: el gemelo malvadoSwift: el nuevoClojure: el raroPasaron varios años ya desde la última vez que utilicé Python profesionalmente. Desde aquel entonces, transité diversos caminos y aprendí nuevas tecnologías. Pero, como pasa con la primera novia, no puedo dejar de compararlo con cada nuevo lenguaje con el que trabajo. Analizo y comparo características de los distintos lenguajes.</p>
+      </div>
     </div>
 
 
@@ -585,7 +591,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
         <tr>
           <td align"center">9:00</td>
           <td align"center">9:45</td>
-          <td align="center" bgcolor='#FED359'>TBA<br/><span class="speaker"></span></td>
+          <td align="center" bgcolor='#FED359'>Qué extrañé de Python en los últimos 4 lenguajes en los que trabajé<br/><span class="speaker">Juajo Conti</span></td>
           <td align="center" bgcolor='#4687B0'>Obteniendo respuestas en milisegundos<br/><span class="speaker2">Claudio Daniel Freire</span></td>
         </tr>
         <tr>
