Fix a la charla de Conti

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
         <div class="jjconti circle"></div>
         <h2><a href="https://www.twitter.com/jjconti" target='blank'>Juanjo Conti</a></h2>
         <h4>Qué extrañé de Python en los últimos 4 lenguajes en los que trabajé</h4>
-        <p>Qué extrañé de Python en los últimos 4 lenguajes en los que trabajé: PHP, Ruby, Swift, Clojure.PHP: el feoRuby: el gemelo malvadoSwift: el nuevoClojure: el raroPasaron varios años ya desde la última vez que utilicé Python profesionalmente. Desde aquel entonces, transité diversos caminos y aprendí nuevas tecnologías. Pero, como pasa con la primera novia, no puedo dejar de compararlo con cada nuevo lenguaje con el que trabajo. Analizo y comparo características de los distintos lenguajes.</p>
+        <p>Qué extrañé de Python en los últimos 4 lenguajes en los que trabajé: PHP, Ruby, Swift, Clojure. PHP: el feo, Ruby: el gemelo malvado, Swift: el nuevo, Clojure: el raro. Pasaron varios años ya desde la última vez que utilicé Python profesionalmente. Desde aquel entonces, transité diversos caminos y aprendí nuevas tecnologías. Pero, como pasa con la primera novia, no puedo dejar de compararlo con cada nuevo lenguaje con el que trabajo. Analizo y comparo características de los distintos lenguajes.</p>
       </div>
     </div>
 
