--- a/index.html
+++ b/index.html
@@ -479,6 +479,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
           <td align"center">14:20</td>
           <td align"center">15:30</td>
           <td align="center" bgcolor='#FED359'>DjangoGirls Tutorial<br/><span class="speaker">(inscripción adicional requerida <a href='http://argentinaenpython.com.ar/django-girls-en-pyconar-mdz/' target='blank'>aquí</a>)</span></td>
+          <td align="center" bgcolor='#4687B0'>Python en la Industria Financiera<br/><span class="speaker2">Jackson Torres</span></td>
         </tr>
         <tr>
           <td align"center">15:30</td>
@@ -489,7 +490,6 @@ google.maps.event.addDomListener(window, 'load', initialize);
           <td align"center">16:00</td>
           <td align"center">18:00</td>
           <td align="center" bgcolor='#FED359'>DjangoGirls Tutorial<br/><span class="speaker">(inscripción adicional requerida <a href='http://argentinaenpython.com.ar/django-girls-en-pyconar-mdz/' target='blank'>aquí</a>)</span></td>
-          <td align="center" bgcolor='#4687B0'>TBA</td>
         </tr>
       </table>
     </div>
