Lista la agenda. Agregada charla de Carlos De La Torre

--- a/index.html
+++ b/index.html
@@ -354,6 +354,12 @@ google.maps.event.addDomListener(window, 'load', initialize);
         <h4>Qué extrañé de Python en los últimos 4 lenguajes en los que trabajé</h4>
         <p>Qué extrañé de Python en los últimos 4 lenguajes en los que trabajé: PHP, Ruby, Swift, Clojure. PHP: el feo, Ruby: el gemelo malvado, Swift: el nuevo, Clojure: el raro. Pasaron varios años ya desde la última vez que utilicé Python profesionalmente. Desde aquel entonces, transité diversos caminos y aprendí nuevas tecnologías. Pero, como pasa con la primera novia, no puedo dejar de compararlo con cada nuevo lenguaje con el que trabajo. Analizo y comparo características de los distintos lenguajes.</p>
       </div>
+      <div class="col-md-4">
+        <div class="delatorre circle"></div>
+        <h2><a href="https://www.linkedin.com/in/carlosdelatorre" target='blank'>Carlos De La Torre</a></h2>
+        <h4>Python en realidad... aumentada</h4>
+        <p>La realidad aumentada es el término que se usa para definir una visión de un entorno físico a través de un dispositivo tecnológico, donde los elementos reales, concretos, materiales, se combinan con elementos virtuales para la creación de una realidad mixta en tiempo real. Consiste en un conjunto de dispositivos que añaden información virtual o sintética a la información física ya existente.En esta charla, donde se presentará un software hecho en Python para una instalación de realidad aumentada, se mezcla tecnología y arte. Tanto en lo concreto como en lo abstracto. En lo concreto: existe hardware, software y el diseño de una instalación artística. En lo abstracto, la ciencia y la tecnología se acercan al arte, de la mano de imágenes, fractales y glitch, ínstándonos a cuestionar ¿qué es lo real? ¿cómo luce el infinito?.</p>
+      </div>
     </div>
 
 
@@ -545,7 +551,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
           <td align"center">13:50</td>
           <td align"center">14:35</td>
           <td align="center" bgcolor='#FED359'>De socket a asyncio en 45 minutos<br/><span class="speaker">Marcos Dione</span></td>
-          <td align="center" bgcolor='#4687B0'>TBA<br/><span class="speaker2"></span></td>
+          <td align="center" bgcolor='#4687B0'>Python en realidad... aumentada<br/><span class="speaker2">Carlos De La Torre</span></td>
         </tr>
         <tr>
           <td align"center">14:45</td>
